<resources>

    <string name="app_name">电子科大信息门户</string>
    <string name="network_test">正在检测网络设置&#8230;</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="schoolNO">学号</string>
    <string name="password">密码</string>
    <string name="loginButton">登录</string>
    <string name="exit">退出</string>
    <string name="buttonPT">我要旁听</string>
    <string name="week">星期</string>
    <string name="time">时间段</string>
    <string name="library">图书借阅信息</string>
    <string name="schoolbus">校车时刻</string>
    <string name="pangting">课程旁听</string>
    <string name="about">关于</string>
    <string name="contact">联系作者：dingvyoung@gmail.com</string>
    <string name="version">电子科大信息门户 v0.2</string>
</resources>